--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Dependencies
 node_modules/
-/node_modules
+*/node_modules/
 .pnp
 .pnp.js
 
@@ -19,11 +19,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # Build files
-/build
-/dist
+build/
+dist/
+*/build/
+*/dist/
 
 # Coverage directory used by tools like istanbul
-/coverage
+coverage/
 
 # IDE - VSCode
 .vscode/*
@@ -32,14 +34,47 @@ yarn-error.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# Misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# IDE - Other
+.idea/
+*.swp
+*.swo
 
-# Debug log from npm
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Uploads and temporary files
+public/uploads/
+uploads/
+temp/
+*.tmp
+
+# Test files and debugging scripts
+test-*.js
+**/test-*.js
+check-*.js
+create-*.js
+setup-*.js
+inspect-*.js
+validate-*.js
+populate-*.js
+recreate-*.js
+reset-*.js
+
+# Documentation (development notes)
+*_README.md
+*_DOCUMENTATION.md
+*_SUMMARY.md
+*_GUIDE.md
+*_FIX.md
+*_REFACTOR.md
+*_COMPARISON.md
+
+# Database files
+*.sql
+!database/*.sql
