--- a/backend/package.json
+++ b/backend/package.json
@@ -18,17 +18,21 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.5.1",
     "express-validator": "^7.0.1",
+    "fast-two-sms": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
+    "qs": "^6.14.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
